ft so many fixes