@@ -1,14 +1,10 @@
 package ru.example.account.app.service.impl;
 
-import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.tags.Tag;
-import jakarta.persistence.LockTimeoutException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.cache.annotation.CacheConfig;
 import org.springframework.cache.annotation.CacheEvict;
-import org.springframework.dao.PessimisticLockingFailureException;
 import org.springframework.data.domain.Page;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
@@ -22,8 +18,6 @@ import ru.example.account.app.service.AccountService;
 import ru.example.account.app.service.PageProcessor;
 import ru.example.account.util.exception.exceptions.AccountNotFoundException;
 import ru.example.account.util.exception.exceptions.BadRequestException;
-import ru.example.account.util.exception.exceptions.ProcessingInterruptedException;
-import ru.example.account.util.exception.exceptions.UserNotFoundException;
 import ru.example.account.web.model.account.request.CreateMoneyTransferRequest;
 import ru.example.account.web.model.account.response.CreateMoneyTransferResponse;
 import java.math.BigDecimal;
@@ -42,43 +36,19 @@ import java.util.Objects;
 @RequiredArgsConstructor
 public class AccountServiceImpl implements AccountService {
 
-    private static final int MAX_LOCK_ATTEMPTS = 5;
-
-    private static final int MAX_ATTEMPTS_PER_PAGE = 3;
-
     private final PageProcessor pageProcessor;
 
     private final AccountRepository accountRepository;
 
     private final JwtUtils jwtUtils;
 
-    /**
-     * Перевод средств с проверкой блокировок.
-     * Использует пессимистичные блокировки уровня REPEATABLE_READ.
-     *
-     * @CacheEvict Инвалидирует кэш аккаунтов после операции
-     */
-    @Operation(
-            summary = "Transfer money",
-            description = "Transfer funds between two accounts with amount validation",
-            responses = {
-                    @ApiResponse(responseCode = "200", description = "Transfer successful"),
-                    @ApiResponse(responseCode = "400", description = "Invalid input data"),
-                    @ApiResponse(responseCode = "409", description = "Concurrency conflict")
-            }
-    )
     @Override
     @Transactional(isolation = Isolation.REPEATABLE_READ)
     public CreateMoneyTransferResponse transferFromOneAccountToAnother(AppUserDetails currentUser,
                                                                        CreateMoneyTransferRequest request,
                                                                        String token) {
 
-        if (request.sum() == null) {
-            log.error("sum and balance must not be a null");
-            throw new IllegalArgumentException("sum and balance must not be a null");
-        }
-
-        if (request.sum().compareTo(BigDecimal.ZERO) <= 0) {
+        if (request.sum() == null || request.sum().compareTo(BigDecimal.ZERO) <= 0) {
             log.error("Sum to transfer must be greater than zero!");
             throw new IllegalArgumentException("Sum to transfer must be greater than zero!");
         }
@@ -99,23 +69,30 @@ public class AccountServiceImpl implements AccountService {
 
         if (!Objects.equals(userIdFromToken, userIdFromDetails)) {
             log.error("User with id: {} and other id {} tries steel money!", userIdFromDetails, userIdFromToken);
-            throw new BadRequestException("User with id: %d and other id %d tries steel money!".formatted(userIdFromDetails, userIdFromToken));
+            throw new BadRequestException(String.format("User with id: %d and other id %d tries steel money!", userIdFromDetails, userIdFromToken));
         }
 
-        Long accountIdUserFromToken = this.getAccountIdFromUserId(userIdFromToken);
-        Long accountIdUserRequestTo = this.getAccountIdFromUserId(request.to());
+        // --- 2. Получаем ID счетов ---
+        Long senderAccountId = this.getAccountIdByUserId(userIdFromToken);
+        Long receiverAccountId = this.getAccountIdByUserId(request.to());
 
-        var firstUserAccount = this.getAccountFromDb(Math.min(accountIdUserFromToken, accountIdUserRequestTo));
-        var secondUserAccount = this.getAccountFromDb(Math.max(accountIdUserFromToken, accountIdUserRequestTo));
+        // --- 3. Блокируем счета в правильном порядке, чтобы избежать дедлока ---
+        Account lockedAccount1 = this.getAccountWithLocksByUserId(Math.min(senderAccountId, receiverAccountId));
+        Account lockedAccount2 = this.getAccountWithLocksByUserId(Math.max(senderAccountId, receiverAccountId));
 
-        return this.validateAndPrecededTransfer(firstUserAccount, secondUserAccount, request.sum());
+        // --- 4. логика определения отправителя и получателя ---
+        if (lockedAccount1.getId().equals(senderAccountId)) {
+            return this.validateAndProceedTransfer(lockedAccount1, lockedAccount2, request.sum());
+        } else {
+            return this.validateAndProceedTransfer(lockedAccount2, lockedAccount1, request.sum());
+        }
     }
 
     private Long getUserIdAndValidateToken(String token) {
 
         if (token == null) {
-            log.info("%Presented token are empty");
-            throw new BadRequestException("Presented token are empty");
+            log.info("Presented token is empty");
+            throw new BadRequestException("Presented token is empty");
         }
 
         if (token.startsWith("Bearer ")) {
@@ -125,26 +102,27 @@ public class AccountServiceImpl implements AccountService {
         return jwtUtils.getUserIdFromClaimJwt(token);
     }
 
-    private CreateMoneyTransferResponse validateAndPrecededTransfer(Account hostUserAccount,
-                                                                    Account receiverUserAccount,
-                                                                    BigDecimal moneyToTransfer) {
-        if (hostUserAccount.getId().equals(receiverUserAccount.getId())) {
+    private CreateMoneyTransferResponse validateAndProceedTransfer(Account senderAccount,
+                                                                   Account receiverAccount,
+                                                                   BigDecimal moneyToTransfer) {
+
+        if (senderAccount.getId().equals(receiverAccount.getId())) {
             throw new IllegalArgumentException("Cannot transfer to yourself");
         }
 
-        if (hostUserAccount.getBalance().compareTo(moneyToTransfer) >= 0) {
+        if (senderAccount.getBalance().compareTo(moneyToTransfer) >= 0) {
             BigDecimal amount = moneyToTransfer.setScale(2, RoundingMode.HALF_UP);
 
-            BigDecimal senderBalance = hostUserAccount.getBalance()
+            BigDecimal senderBalance = senderAccount.getBalance()
                     .subtract(amount)
                     .setScale(2, RoundingMode.HALF_UP);
 
-            BigDecimal receiverBalance = receiverUserAccount.getBalance()
+            BigDecimal receiverBalance = receiverAccount.getBalance()
                     .add(amount)
                     .setScale(2, RoundingMode.HALF_UP);
 
-            hostUserAccount.setBalance(senderBalance);
-            receiverUserAccount.setBalance(receiverBalance);
+            senderAccount.setBalance(senderBalance);
+            receiverAccount.setBalance(receiverBalance);
 
             log.info("Operation was succeed");
             return new CreateMoneyTransferResponse(true, "Operation was succeed");
@@ -154,129 +132,60 @@ public class AccountServiceImpl implements AccountService {
         }
     }
 
-    /**
-     * Ежедневное начисление 10% на баланс (макс. 207% от депозита).
-     * Запускается каждые 30 секунд (для демонстрации).
-     */
-    private int currentPage = 0;
-    private boolean processingComplete = false;
-    private int lockConflictCount = 0;
-
-    @Scheduled(fixedRate = 30_000)
-    @CacheEvict(cacheNames = "accounts", allEntries = true)
+    @Scheduled(fixedRateString = "${app.scheduling.moneyRiser.rate:30000}")
+    @CacheEvict(cacheNames = {"users", "accounts"}, allEntries = true)
     public void moneyRiser() {
+        log.info("Starting scheduled balance increase job (while-loop strategy).");
 
-        if (processingComplete) {
-          this.resetProcessingState();
-            return;
-        }
+        int pageNumber = 0;
+        final int pageSize = 50;
+        boolean hasNextPage = true;
 
-        try {
-
-            this.processPageWithRetries();
-        } catch (InterruptedException e) {
-            this.handleInterruption();
-        } catch (ProcessingInterruptedException ex) {
-            log.warn("Processing interrupted", ex);
-            this.resetProcessingState();
-        }
-    }
-
-    private void processPageWithRetries() throws InterruptedException {
-
-        for (int attempt = 0; attempt < MAX_ATTEMPTS_PER_PAGE; attempt++) {
+        while (hasNextPage) {
 
             try {
 
-                this.processCurrentPage();
-                lockConflictCount = 0;
-                return;
-            } catch (PessimisticLockingFailureException | LockTimeoutException ex) {
-                this.handleLockConflict(attempt);
+                Page<Account> currentPage = pageProcessor.processPage(pageNumber, pageSize);
+
+                if (!currentPage.hasContent()) {
+                    if (pageNumber == 0) {
+                        log.info("No accounts found for balance increase at all.");
+                    } else {
+                        log.info("No more accounts to process. Job finished.");
+                    }
+                    break;
+                }
+
+                log.debug("Page {} processed successfully.", pageNumber);
+
+
+                hasNextPage = currentPage.hasNext();
+                pageNumber++;
+
+            } catch (Exception e) {
+                // Если PageProcessor выбросил финальное исключение (даже после ретраев),
+                // мы логируем это и немедленно прекращаем работу.
+                log.error("Fatal error on page {} while processing balances. " +
+                        "Stopping the job for this run. Error: {}", pageNumber, e.getMessage());
+                // Прерываем весь цикл
+                hasNextPage = false;
             }
         }
 
-        this.handleMaxAttemptsReached();
+        log.info("Scheduled balance increase job finished for this run.");
     }
 
-    private void processCurrentPage() {
-
-        Page<Account> pageResult = pageProcessor.processPage(currentPage, 50);
-
-        if (pageResult == null || pageResult.isEmpty()) {
-
-            this.handlePageError();
-            return;
-        }
-
-        this.updateProcessingState(pageResult);
-        log.info("Processed page {}: {} accounts", currentPage, pageResult.getNumberOfElements());
-    }
-
-    private void handleLockConflict(int attempt) throws InterruptedException {
-        lockConflictCount = Math.min(lockConflictCount + 1, MAX_LOCK_ATTEMPTS);
-        log.warn("Lock conflict on page {} (attempt {}/{})",
-                currentPage, attempt + 1, MAX_ATTEMPTS_PER_PAGE);
-
-        long delay = delayCalculator(lockConflictCount);
-        Thread.sleep(delay);
-    }
-
-    private void handleMaxAttemptsReached() {
-        log.warn("Max attempts reached for page {}, skipping", currentPage);
-        this.handlePageError();
-    }
-
-    private void handleInterruption() {
-        Thread.currentThread().interrupt();
-        log.warn("Thread interrupted during backoff delay");
-        throw new ProcessingInterruptedException("Processing interrupted during lock resolution");
-    }
-    private void resetProcessingState() {
-        currentPage = 0;
-        processingComplete = false;
-        lockConflictCount = 0;
-    }
-
-    private void handlePageError() {
-        log.error("Page {} processing failed", currentPage);
-        currentPage++;
-        lockConflictCount = 0; // Сброс счетчика конфликтов
-    }
-
-    private void updateProcessingState(Page<Account> pageResult) {
-        if (!pageResult.hasNext()) {
-            processingComplete = true;
-        } else {
-            currentPage++;
-        }
-    }
-
-    private long delayCalculator(int lockConflictCount) {
-
-        long baseDelay = 100L;
-        long maxDelay = 10_000;
-
-        double multiplier = Math.pow(2, Math.min(lockConflictCount - 1, 30));
-        long delay = (long) (baseDelay * multiplier);
-
-        return Math.min(delay, maxDelay);
-    }
-
-    private Long getAccountIdFromUserId(Long userId) {
-
+    private Long getAccountIdByUserId(Long userId) {
         return this.accountRepository.findAccountIdByUserIdSafe(userId).orElseThrow(() -> {
             log.error("No such entity as requested account!");
             return new AccountNotFoundException("No such entity as requested account!");
         });
     }
 
-    private Account getAccountFromDb(Long userId) {
-
-        return this.accountRepository.getAccountWithLocksByUserId(userId).orElseThrow(() -> {
-            log.error("No user in db with such id: {}", userId);
-            return new UserNotFoundException("No user in db with such id: %d".formatted(userId));
+    private Account getAccountWithLocksByUserId(Long accountId) {
+        return this.accountRepository.getAccountWithLocksByUserId(accountId).orElseThrow(() -> {
+            log.error("Account in db with such id: {} was not found", accountId);
+            return new AccountNotFoundException(String.format("Account in db with such id: %d not found", accountId));
         });
     }
 }
-
